; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/sdp/extr_sdp_api.c_SDP_DiDiscover.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/sdp/extr_sdp_api.c_SDP_DiDiscover.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@SDP_DI_DISC_FAILED = common dso_local global i32 0, align 4
@UUID_SERVCLASS_PNP_INFORMATION = common dso_local global i32 0, align 4
@SDP_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SDP_DiDiscover(i32 %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_5__, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %13 = load i32, i32* @SDP_DI_DISC_FAILED, align 4
  store i32 %13, i32* %9, align 4
  store i32 1, i32* %10, align 4
  %14 = load i32, i32* @UUID_SERVCLASS_PNP_INFORMATION, align 4
  store i32 %14, i32* %11, align 4
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  store i32 2, i32* %15, align 4
  %16 = load i32, i32* %11, align 4
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load i32*, i32** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %10, align 4
  %22 = call i64 @SDP_InitDiscoveryDb(i32* %19, i32 %20, i32 %21, %struct.TYPE_5__* %12, i32 0, i32* null)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %33

24:                                               ; preds = %4
  %25 = load i32, i32* %5, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = call i64 @SDP_ServiceSearchRequest(i32 %25, i32* %26, i32* %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %24
  %31 = load i32, i32* @SDP_SUCCESS, align 4
  store i32 %31, i32* %9, align 4
  br label %32

32:                                               ; preds = %30, %24
  br label %33

33:                                               ; preds = %32, %4
  %34 = load i32, i32* %9, align 4
  ret i32 %34
}

declare dso_local i64 @SDP_InitDiscoveryDb(i32*, i32, i32, %struct.TYPE_5__*, i32, i32*) #1

declare dso_local i64 @SDP_ServiceSearchRequest(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
